// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModeChange Component > should toggle theme mode correctly and match snapshots 1`] = `
<DocumentFragment>
  <button
    aria-label="Change To Dark-mode"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-oh9jts-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    data-testid="toggleMode"
    id="toggleMode"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-46w9ea-MuiSvgIcon-root"
      data-testid="DarkModeOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.37 5.51c-.18.64-.27 1.31-.27 1.99 0 4.08 3.32 7.4 7.4 7.4.68 0 1.35-.09 1.99-.27C17.45 17.19 14.93 19 12 19c-3.86 0-7-3.14-7-7 0-2.93 1.81-5.45 4.37-6.49M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-2.98 0-5.4-2.42-5.4-5.4 0-1.81.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`ModeChange Component > should toggle theme mode correctly and match snapshots 2`] = `
<DocumentFragment>
  <button
    aria-label="Change To Light-mode"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-oh9jts-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    data-testid="toggleMode"
    id="toggleMode"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-5zrfvh-MuiSvgIcon-root"
      data-testid="FlareIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 11H1v2h6zm2.17-3.24L7.05 5.64 5.64 7.05l2.12 2.12zM13 1h-2v6h2zm5.36 6.05-1.41-1.41-2.12 2.12 1.41 1.41zM17 11v2h6v-2zm-5-2c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3m2.83 7.24 2.12 2.12 1.41-1.41-2.12-2.12zm-9.19.71 1.41 1.41 2.12-2.12-1.41-1.41zM11 23h2v-6h-2z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-r3djoj-MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`ModeChange Component > should toggle theme mode correctly and match snapshots 3`] = `
<DocumentFragment>
  <button
    aria-label="Change To Dark-mode"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-oh9jts-MuiButtonBase-root-MuiIconButton-root"
    data-mui-internal-clone-element="true"
    data-testid="toggleMode"
    id="toggleMode"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-46w9ea-MuiSvgIcon-root"
      data-testid="DarkModeOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M9.37 5.51c-.18.64-.27 1.31-.27 1.99 0 4.08 3.32 7.4 7.4 7.4.68 0 1.35-.09 1.99-.27C17.45 17.19 14.93 19 12 19c-3.86 0-7-3.14-7-7 0-2.93 1.81-5.45 4.37-6.49M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-2.98 0-5.4-2.42-5.4-5.4 0-1.81.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1"
      />
    </svg>
    <span
      class="MuiTouchRipple-root css-r3djoj-MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
